# webgraph

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: constants.py  main.py  settings.py
tests/: test_main.py
