[tool.poetry]
name = "webgraph"
version = "0.1.0"
description = "Consumes urls from a queue and inserts them into Neo4j database along with the links the web page points to & recalculates pagerank periodically"
authors = ["Vlad-Sebastian Cretu <vlad.sebastian.cretu.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiokafka = "^0.8.1"
neo4j = "^5.12.0"
aiohttp = "^3.8.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
